@@ -1,6 +1,6 @@
 ---
 name: Test-Aggregate
-version: 0.05
+version: 0.06
 author:
   - 'Curtis "Ovid" Poe <ovid@cpan.org>'
 abstract: Aggregate C<*.t> tests to make them run faster.
@@ -12,7 +12,7 @@ build_requires:
 provides:
   Test::Aggregate:
     file: lib/Test/Aggregate.pm
-    version: 0.05
+    version: 0.06
 generated_by: Module::Build version 0.2808
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.2.html
